# api/users.js
@@ -1,17 +1,15 @@
 const express = require("express");
 const router = express.Router();
 const authController = require("../controllers/authController");
+const { respondSuccess } = require("../utils/apiUtils");
 
 // API for mobile app
 
-router.post("/signup", authController.signup);
-router.post("/login", authController.login, (req, res)=>{
-  console.log('res.body :>> ', res.body);
-});
-router.get("/logout", authController.logout, function (req, res) {
-  res.json({
-    logout: "success"
-  })
+router.post("/signup", authController.createNewUser);
+
+router.post("/login", authController.authenticateLoginInfo);
+router.post("/logout", authController.setJwtTokenExpire, function (req, res) {
+  respondSuccess(res, 200, "Logged out!")
 });
 
 
